--- a/timeline/index.html
+++ b/timeline/index.html
@@ -7,10 +7,17 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+<div id="nav">
+    <h2>Kashi</h2>
+    <div id="part2">
+        <h4>work</h4>
+        <h4>home</h4>
+        <h4>about</h4>
+        <h4>contact</h4>
 
-<h1>hey </h1>
-<h1>am </h1>
-<h1>Kashif </h1>
+    </div>
+</div>
+<h1>GSAP timeline topics</h1>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./script.js"></script>
