--- a/landing page/index.html
+++ b/landing page/index.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing page</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
     <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
-</head>
-<body>
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <section class="section">
-        <nav>
-            <h1>
-                <i class="ri-shining-2-fill"></i>   WizardZ
-            </h1>
-        
+      <nav>
+        <h1><i class="ri-shining-2-fill"></i> WizardZ</h1>
+
         <div class="part2">
-            <h4>About us</h4>
-            <h4>Services</h4>
-            <h4>Use Cases</h4>
-            <h4>Pricing</h4>
-            <h4>Blog</h4>
-            <button>Request a quote</button>
+          <h4>About us</h4>
+          <h4>Services</h4>
+          <h4>Use Cases</h4>
+          <h4>Pricing</h4>
+          <h4>Blog</h4>
+          <button>Request a quote</button>
         </div>
-    </nav>
-    <!-- nav end -->
-     <div class="center">
+      </nav>
+      <!-- nav end -->
+      <div class="center">
         <div class="center-part1">
-<h1>Navigating the digital landscape for success </h1>
-<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero facilis asperiores porro fugiat quasi dolore praesentium 
-    numquam, deleniti magni hic a accusantium eligendi aut pariatur natus deserunt, est officiis earum.</p>
-    <button>Book An consulation</button>
+          <h1>Navigating the digital landscape for success</h1>
+          <p>
+            Our digital marketing agency helps businesses grow 
+            and succeed online through a range of services including SEO, PPC, social media marketing, and content creation.
+          </p>
+          <button>Book An consulation</button>
         </div>
         <div class="center-part2">
-<img src="./image/marketing-illustration_878233-772.avif" alt="">
+          <img src="./image/marketing-illustration_878233-772.avif" alt="" />
         </div>
-     </div>
-     <div class="section1bottom">
-        <img src="./image/amazon.png" alt="" height="50px">
-        <img src="./image/drible.svg" alt="" height="40px">
-        <img src="./image/hub.png" alt="" height="50px">
-        <img src="./image/not.png" alt="" height="50px">
-        <img src="./image/netflix.png" alt="" height="80px">
-        <img src="./image/zoom.png" alt="" height="80px">
-     </div>
+      </div>
+      <div class="section1bottom">
+        <img src="./image/amazon.png" alt="" height="50px" />
+        <img src="./image/drible.svg" alt="" height="40px" />
+        <img src="./image/hub.png" alt="" height="50px" />
+        <img src="./image/not.png" alt="" height="50px" />
+        <img src="./image/netflix.png" alt="" height="80px" />
+        <img src="./image/zoom.png" alt="" height="80px" />
+      </div>
     </section>
-
-</body>
+  </body>
 </html>
